# hanabi

./: 6502.py  a.out  compile.c  compile.py  defin.py  example.hana  firstbit.py  hanabi.c  hanabi.g4  hanabiLexer.interp  helloworld.c  hshc.hana  language.md  mars.py  pseudo.py  sample.js  sample.json  testing.hana
.antlr/: Cobol85Lexer.java  hanabi.interp  hanabi.tokens  hanabiLexer.interp  hanabiLexer.java  hanabiParser.java
c-oper/: c-stitcher.py  output.c  recurse.py  simple.c
chanabi/: CMakeLists.txt  README.md  scratchpad.txt
chanabi/source/: CMakeLists.txt
chanabi/source/common/: common.h  log.c  log.h  types.h
chanabi/source/compiler/: CMakeLists.txt  chanabi-compile.c
chanabi/source/interpreter/: CMakeLists.txt  chanabi-interpret.c
新しいフォルダー/: README.md  hanabi.interp  hanabiLexer.py  hanabiListener.py  hanabiParser.py  hshc.hana  mars.py
新しいフォルダー/c-oper/: c-stitcher.py  recurse.py  simple.c
新しいフォルダー/img/: 6502.py  a.out  dump.hana  dump.py  dynamic_alloc.py  example.asm  example.hana
